Fixed header height zero on Safari

--- a/frontend/assets/css/default.css
+++ b/frontend/assets/css/default.css
@@ -11,8 +11,6 @@ html, body {
 
 body {
     margin: 0;
-    display: flex;
-    flex-direction: column;
     background: #c0d6ed url(/assets/svg/RepeatingBG.svg);
     background-size: 25%;
     color: black;
@@ -22,7 +20,7 @@ a {
     color: #254db0;
 }
 
-body > header {
+body > #header {
     padding: 5px;
     display: flex;
     flex-wrap: wrap;
@@ -33,33 +31,36 @@ body > header {
 }
 
 @media screen and (max-width: 500px) {
-    body > header {
+    body > #header {
         flex-direction: column;
     }
 }
 
-body > header > h1 {
+body > #header > h1 {
    flex-shrink: 1; 
+   float: left;
    margin: 5px 0px 5px 0px;
 }
 
-body > header > .links {
+body > #header > .links {
+    margin: auto 0 auto auto;
     text-align: right;
     flex: 1;
 }
 
-body > header > .links > a {
+body > #header > .links > a {
     padding: 0px 10px 0px 10px;
 }
 
 
 @media screen and (max-width: 500px) {
-    body > header > .links {
+    body > #header > .links {
+        margin: auto;
         text-align: center;
     }
 }
 
-body > header > .links > a {
+body > #header > .links > a {
     display: inline;
 }
 
