--- a/frontend/assets/css/pricelist.css
+++ b/frontend/assets/css/pricelist.css
@@ -5,7 +5,9 @@ div.pricelist {
     margin: 10px;
     padding: 20px 20px 10px 20px;
     text-align: center;
-    width: calc(100% - 60px); height: 500px;
+    width: calc(100% - 60px);
+    max-width: 650px;
+    height: 500px;
 }
 
 div.pricelist > h1 {
